# peerprep-g03

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  jest.config.js  package-lock.json  package.json  tsconfig.test.json
.github/workflows/: ci.yml
backend/: .env  Dockerfile  package-lock.json  package.json
backend/src/: app.js  server.js
backend/src/collab-service/: Dockerfile  app.js  package-lock.json  package.json  server.js
backend/src/collab-service-yjs/: Dockerfile  package-lock.json  package.json
backend/src/controller/: controller.js
backend/src/match-service/: READ_ME.md  app.js  package-lock.json  package.json  server.js
backend/test/: question-service.test.js
frontend/: .gitignore  Dockerfile  eslint.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: config.ts  constant.ts  root.tsx  routes.ts
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
kubernetes/question-service/: load-generator-pod.yaml  mongo-headless-service.yaml  mongo-init-configmap.yaml  mongo-statefulset.yaml  question-service-cluster-ip.yaml  question-service-hpa.yaml  question-service.yaml
kubernetes/question-service/question-service-load-generator/: Dockerfile  main.py  pyproject.toml
local/: init.js
nfr-test/: README.md  requirements.txt
nfr-test/collab-service/: NFR4.1.js  NFR4.2.js  README.md
nfr-test/match-service/: NFR2.2.py
nfr-test/question-service/: NFR3.1.py  NFR3.2.py
sync-service/: Dockerfile  entrypoint.sh
sync-service/scripts/: sync-cronjob  sync-script.sh
(+136 files in other folders)
